correctly align text

--- a/_sass/partials/_featured-projects.scss
+++ b/_sass/partials/_featured-projects.scss
@@ -68,6 +68,7 @@
     p {
       font-size: 0.9rem;
       line-height: 1.3;
+      text-align: left;
     }
   }
 }
